# money

./: .gitignore  CMakeLists.txt  LICENSE  README.md  money-types-test.cpp
lib/: CMakeLists.txt
lib/inc/: moneylib.h
